# docs/swagger.json
@@ -9,7 +9,37 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/artifacts/innerop/upload": {
+        "/artifact-service/v1/artifacts/": {
+            "get": {
+                "description": "Retrieves a list of all uploaded artifacts with their metadata",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "files"
+                ],
+                "summary": "List all artifacts",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Artifact"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Uploads a file and saves metadata to the database",
                 "consumes": [
@@ -62,9 +92,9 @@
                 }
             }
         },
-        "/artifacts/innerop/{id}": {
+        "/artifact-service/v1/artifacts/{uuid}/action/downloadFile": {
             "get": {
-                "description": "Downloads a file by its ID",
+                "description": "Downloads a file by its UUID",
                 "produces": [
                     "application/octet-stream"
                 ],
@@ -75,8 +105,8 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "File ID",
-                        "name": "id",
+                        "description": "File UUID",
+                        "name": "uuid",
                         "in": "path",
                         "required": true
                     }
@@ -222,6 +252,26 @@
         }
     },
     "definitions": {
+        "models.Artifact": {
+            "type": "object",
+            "properties": {
+                "content_type": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "filename": {
+                    "type": "string"
+                },
+                "size": {
+                    "type": "integer"
+                },
+                "uuid": {
+                    "type": "string"
+                }
+            }
+        },
         "models.GenTokenRequest": {
             "type": "object",
             "required": [
